test/Fail/TerminationNoArgs.err
TerminationNoArgs.agda:3.1-4.12: error: [TerminationIssue]
Termination checking failed for the following functions:
  loop
Problematic calls:
  loop
    (at TerminationNoArgs.agda:4.8-12)
